--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </a>
                 </div>
                 <!-- Placeholder Image (Replace with your actual image path) --><div class="md:w-1/3 order-1 md:order-2 w-full max-w-sm rounded-xl overflow-hidden shadow-2xl bg-gray-800">
-                    <img src="ata" 
+                    <img src="ata.jpg" 
                          alt="AtaMohammad Momin Portrait" 
                          class="w-full h-auto object-cover opacity-90 hover:opacity-100 transition duration-500"
                          onerror="this.onerror=null; this.src='https://placehold.co/400x550/222/FFF?text=AtaMohammad+Momin\n(Your+Photo)'">
@@ -206,7 +206,7 @@
                     </div>
 
                     <!-- Placeholder Image --><div class="md:w-1/3 w-full max-w-md mx-auto rounded-xl overflow-hidden shadow-2xl bg-gray-800">
-                         <img src="https://placehold.co/500x350/222/FFF?text=Working+at+Desk" 
+                         <img src="photo.jpg" 
                              alt="Working at Desk" 
                              class="w-full h-auto object-cover opacity-90 hover:opacity-100 transition duration-500"
                              onerror="this.onerror=null; this.src='https://placehold.co/500x350/222/FFF?text=Working+at+Desk'">
@@ -280,7 +280,7 @@
 
                 <div id="form-status" class="mb-4 text-center py-3 rounded-lg text-white font-medium hidden"></div>
 
-                <form id="contact-form" class="max-w-xl mx-auto p-6 card rounded-xl shadow-2xl">
+                <form id="contact-form" class="max-w-xl mx-auto p-6 card rounded-xl shadow-2xl" action="https://docs.google.com/forms/d/e/1FAIpQLSeQqgl_FZCW5yD-RycHu2xJD7kzQBpg2Bsd0CMEtFxx6zsatA/viewform?usp=publish-editor">
                     
                     <div class="mb-5">
                         <label for="name" class="block text-sm font-medium text-gray-300 mb-2">Your Name</label>
