--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                    rel="noopener noreferrer" 
                    id="contact-form-link"
                    class="btn-primary text-white font-medium py-3 px-8 text-xl rounded-lg shadow-2xl hover:shadow-3xl transition duration-300 inline-block pulsating">
-                    Contact For More please response to this Google Form 🚀
+                    Contact Me Here🚀
                 </a>
 
                 <p class="text-gray-500 mt-6 text-sm">
