--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         body {
             font-family: 'Inter', sans-serif;
             background-color: var(--dark-bg);
-            color: #fff;
+            color: #ffffff;
             overflow-x: hidden;
         }
         .text-accent {
@@ -328,8 +328,8 @@
             
             let snowflakes = [];
             let raindrops = []; // New array for rain particles
-            const maxSnowflakes = 150; // Adjusted count
-            const maxRaindrops = 500; // High count for dense rain
+            const maxSnowflakes = 300; // Adjusted count
+            const maxRaindrops = 600; // High count for dense rain
             let lightningPoints = []; // Global variable to hold the lightning path points
 
             // --- 1. Canvas Setup ---
@@ -347,7 +347,7 @@
             function Snowflake() {
                 this.x = Math.random() * snowCanvas.width;
                 this.y = Math.random() * snowCanvas.height;
-                this.r = Math.random() * 2 + 0.5; // Size 0.5 to 2.5
+                this.r = Math.random() * 4 + 0.10; // Size 0.5 to 2.5
                 this.d = Math.random() * maxSnowflakes; // Density for sine wave horizontal movement
                 this.speed = Math.random() * 1.5 + 0.5; // Vertical speed 0.5 to 2.0
                 this.rotation = Math.random() * Math.PI * 2;
@@ -387,9 +387,9 @@
             function Raindrop() {
                 this.x = Math.random() * snowCanvas.width;
                 this.y = Math.random() * snowCanvas.height;
-                this.length = Math.random() * 8 + 6; // Length 6 to 14
+                this.length = Math.random() * 8 + 15; // Length 6 to 14
                 this.speed = Math.random() * 5 + 10; // Faster fall: 10 to 15
-                this.width = 1.5;
+                this.width = 2;
             }
 
             Raindrop.prototype.draw = function() {
@@ -590,7 +590,7 @@
 
             function scheduleLightning() {
                 // Schedule the next strike between 0.2 and 1 second for continuous effect
-                const nextStrikeTime = Math.random() * (1000 - 200) + 200; 
+                const nextStrikeTime = Math.random() * (600 - 200) + 400; 
                 
                 setTimeout(async () => {
                     await startLightningSequence();
